[package]
name = "kumandra-service"
version = "1.0.0"
authors = ["Kumandra"]
edition = "2021"
# rust-version = "1.60"
# version.workspace = true
# authors.workspace = true
# edition.workspace = true

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
mmr-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.34" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# External Crates
futures = "0.3.21"
hex-literal = "0.3.4"
gum = { package = "tracing-gum", path = "../gum/" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kvdb = "0.12.0"
kvdb-rocksdb = { version = "0.16.0", optional = true }
parity-db = { version = "0.4.2", optional = true }

async-trait = "0.1.57"
lru = "0.8"

# Kumandra
kumandra-primitives = { path = "../../primitives" }
kumandra-node-primitives = { path = "../primitives" }
polkadot-rpc = { path = "../../rpc" }

# Kumandra Runtimes
kumandra-runtime = { path = "../../runtime/", optional = true }


[features]
default = ["db", "full-node", "kumandra-native"]

db = [
	"service/rocksdb"
]

full-node = [ 
# 	"polkadot-node-core-av-store",
# 	"polkadot-node-core-approval-voting",
# 	"polkadot-availability-bitfield-distribution",
# 	"polkadot-availability-distribution",
# 	"polkadot-availability-recovery",
	"kumandra-client",
# 	"polkadot-collator-protocol",
# 	"polkadot-dispute-distribution",
# 	"polkadot-gossip-support",
# 	"polkadot-network-bridge",
# 	"polkadot-node-collation-generation",
# 	"polkadot-node-core-backing",
# 	"polkadot-node-core-bitfield-signing",
# 	"polkadot-node-core-candidate-validation",
# 	"polkadot-node-core-chain-api",
# 	"polkadot-node-core-chain-selection",
# 	"polkadot-node-core-dispute-coordinator",
# 	"polkadot-node-core-provisioner",
# 	"polkadot-node-core-runtime-api",
# 	"polkadot-statement-distribution",
# 	"polkadot-approval-distribution",
# 	"polkadot-node-core-pvf-checker",
# 	"kvdb-rocksdb",
# 	"parity-db",
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
kumandra-native = [ "kumandra-runtime", "kumandra-runtime-constants", "kumandra-client/kumandra" ]

runtime-benchmarks = [
	"kumandra-runtime?/runtime-benchmarks",

	"service/runtime-benchmarks",
]
try-runtime = [
	"kumandra-runtime?/try-runtime",
]
fast-runtime = [
	"kumandra-runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"kumandra-client/runtime-metrics",
	# "kumandra-runtime?/runtime-metrics",
	# "kumandra-runtime-parachains/runtime-metrics"
]