[package]
name = "kumandra-service"
version = "1.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.34" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# External Crates
futures = "0.3.21"
hex-literal = "0.3.4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kvdb = "0.12.0"
kvdb-rocksdb = { version = "0.16.0", optional = true }
parity-db = { version = "0.4.2", optional = true }

async-trait = "0.1.57"
lru = "0.8"

# Kumandra
# kumandra-client = { path = "../client", default-features = false, optional = true }
kumandra-client = { path = "../client" }
kumandra-primitives = { path = "../../primitives" }
# polkadot-node-primitives = { path = "../primitives" }
kumandra-rpc = { path = "../rpc" }

# Kumandra Runtimes
kumandra-runtime = { path = "../../runtime" }

[dev-dependencies]
# polkadot-test-client = { path = "../test/client" }
# polkadot-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
log = "0.4.17"
assert_matches = "1.5.0"
tempfile = "3.2"

# [features]
# default = ["db", "full-node", "polkadot-native"]

[features]
default = ["db"]

db = [
	"service/rocksdb"
]


# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
# runtime-benchmarks = [
# 	"kumandra-runtime?/runtime-benchmarks",
# 	"service/runtime-benchmarks",
# ]
# try-runtime = [
# 	"kumandra-runtime?/try-runtime",
# ]
# fast-runtime = [
# 	"kumandra-runtime?/fast-runtime",
# ]

