[package]
name = "kumandra-testing"
version = "1.0.0"
authors = ["KOOMPI"]
description = "Test utilities for Substrate node."
edition = "2021"
repository = "https://github.com/kumandra/kumandra/"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
fs_extra = "1"
futures = "0.3.21"
log = "0.4.17"
tempfile = "3.1.0"
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

kumandra-executor = { version = "1.0.0", path = "../executor" }
kumandra-primitives = { version = "1.0.0", path = "../../primitives" }
kumandra-runtime = { version = "1.0.0", path = "../../runtime" }

pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", features = ["rocksdb"] }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", features = [
	"test-helpers",
	"rocksdb",
] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
