
[package]
name = "pallet-support"
version = "1.0.0"
authors = ["Kumandra"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
]
